--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   provider: ^6.0.3
   flutter_slidable: ^1.3.0
+  firebase_core: ^1.19.2
+  firebase_auth: ^3.4.2
+  cloud_firestore: ^3.3.0
+  get_storage: ^2.0.3
 
 dev_dependencies:
   flutter_test:
