--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_auth: ^3.4.2
   cloud_firestore: ^3.3.0
   get_storage: ^2.0.3
+  firebase_crashlytics: ^2.8.5
 
 dev_dependencies:
   flutter_test:
